# GLEngine

./: .clangd  .gitignore  README.md
include/: Circle.h  Light.h  ObjAdjImporter.h  ObjImporter.h  Rectangle.h  TextureImage.h
src/: .clang-format  CMakeLists.txt  Controller.cpp  GUIController.cpp  GUIView.cpp  Makefile  View.cpp  View.h
src/Pipeline/: AbstractPipeline.h  ClassicPipeline.h  GIPipeline.h  IPipeline.h  PBRIBLPipeline.h  PBRSVIBLPipeline.h  TexturedPBRPipeline.h  TexturedPBRSVPipeline.h
src/scenegraphmodels/basic-pbr/: basicPBR-test.txt  pbr-shadow-volume-test-2.txt  pbr-shadow-volume-test.txt  spotlightPBR-test.txt
src/scenegraphmodels/classic/: big-ben-wall.txt  big-ben.txt  box.txt  classic-test.txt  drone-legs.txt  drone.txt  face-hierarchy-commands.txt  face-hierarchy-with-copy-commands.txt  humanoid-commands.txt  output.txt  propeller.txt  shadow-volume-test.txt  stack-of-boxes.txt  sv-bump-map-test.txt  test.txt  two-humans-commands.txt
src/scenegraphmodels/gi/: GI-export-2.txt  GI-export-3.txt  GI-export.txt  GI-scene.txt
src/scenegraphmodels/ibl/: test-export-4.txt
src/scenegraphmodels/textured-pbr/: TexturedPBR-test-2.txt  TexturedPBR-test.txt  test-export-2.txt  test-export-3.txt  test-export.txt  texture-pbr-shadow-volume-test-2.txt  texture-pbr-shadow-volume-test.txt  texture-pbr-sv-srt-test.txt  texture-spotlightPBR-test.txt
src/sgraph/: IScenegraph.h  ImageLoader.h  LeafNode.h  NodeDetailsRenderer.h  PPMImageLoader.h  ScenegraphGUIRenderer.h  ScenegraphImporter.h
src/sgraph/Jobs/: AddMeshJob.h  DeleteLightJob.h  DeleteNodeJob.h  IJob.h  InsertGroupJob.h  InsertLeafJob.h  InsertLightJob.h  InsertRotateJob.h  InsertSRTJob.h  InsertScaleJob.h  InsertTranslateJob.h  ReadTextureJob.h  UpdateLeafMaterialJob.h  UpdateLightJob.h  UpdateRotateJob.h  UpdateSRTJob.h  UpdateScaleJob.h  UpdateTranslateJob.h
src/shaders/: default.vert  geometry-test.vert  silhouette.vert
src/shaders/PBR/: PBR-shadow-volume.vert  PBR.vert  TexturePBR.vert
src/shaders/VXGI/Render/: GIPBR.vert
src/shaders/VXGI/mipmap/: computeMipmap.comp
src/shaders/VXGI/voxelize/: debug.vert  voxelResolve.comp  voxelize.frag  voxelize.vert
src/shaders/cubemap/: cubemap.vert  shpericalHdrCubemap.vert
src/shaders/cubemap/HDR/: brdf.vert  equiRectangular.vert  hdrSkyboxToneMapping.vert  irradiance.vert  prefilter.vert
src/shaders/postprocessing/: hdr.vert
src/shaders/shadow/: PBR-SV.vert  PBR-ambient.vert  Texture-PBR-IBL-ambient.vert  Texture-PBR-ambient.vert  TexturePBR-SV.vert  ambient.vert  depth.vert  phong-shadow-bump.vert  phong-shadow.vert  shadow.vert
